[draw] Always assign all lots; guarantee min one per participant if option checked
- Refactor draw algorithm in DrawServiceImpl:
  - All lots are always assigned, regardless of option.
  - If "guarantee one lot per participant" is checked, each participant receives at least one lot (if enough lots), then remaining lots are distributed randomly, weighted by tickets.
  - If not checked, all lots are assigned randomly, weighted by tickets (a participant can win multiple lots).
  - If lots remain after all tickets are used, assign remaining lots at pure random among all participants.
- Fix logic to remove only one ticket at a time (instead of all) from the pool per assigned lot.
- Fix: No need to run draw twice for all lots to be assigned.
- Update transactional logic and comments for clarity.

BREAKING: The lottery now guarantees all lots are assigned in one run, and the distribution is fair.